--- a/.eslintrc
+++ b/.eslintrc
@@ -1,6 +1,10 @@
 {
   "extends": "standard",
+  "plugins": [
+    "mocha"
+  ],
   "rules": {
+    "mocha/no-exclusive-tests": "error",
     "no-extra-semi": "error",
     "semi": [2, "always"]
   }
