--- a/package.json
+++ b/package.json
@@ -5,25 +5,26 @@
   "main": "index.js",
   "scripts": {
     "start": "nodemon ./server.js ",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha"
   },
   "author": "ivashchenko a.",
   "license": "ISC",
   "devDependencies": {
+    "chai": "^4.1.2",
+    "chai-http": "^3.0.0",
     "eslint": "^4.11.0",
     "eslint-config-standard": "^10.2.1",
     "eslint-plugin-import": "^2.8.0",
+    "eslint-plugin-mocha": "^4.11.0",
     "eslint-plugin-node": "^5.2.1",
     "eslint-plugin-promise": "^3.6.0",
     "eslint-plugin-standard": "^3.0.1",
+    "mocha": "^4.1.0",
     "nodemon": "^1.12.1"
   },
   "dependencies": {
-    "ejs": "^2.5.7",
     "express": "^4.16.2",
-    "hbs": "^4.0.1",
     "lowdb": "^1.0.0",
-    "lru-cache": "^4.1.1",
     "pug": "^2.0.0-rc.4"
   }
 }
