--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "eslint-plugin-promise": "^3.6.0",
     "eslint-plugin-standard": "^3.0.1",
     "mocha": "^4.1.0",
-    "nodemon": "^1.12.1"
+    "nodemon": "^1.12.1",
+    "sinon": "^4.1.4"
   },
   "dependencies": {
     "express": "^4.16.2",
