--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "nodemon ./server.js ",
-    "test": "mocha"
+    "test": "mocha --exit"
   },
   "author": "ivashchenko a.",
   "license": "ISC",
